--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +12,8 @@
 
 <body>
     <header class="header">
-        <img class="header__logo" src="./multimedia/animals-circle-globe-logo-template-260nw-762474991.png"
-            alt="logo de Aniway">
+        <img class="header__logo animate__animated animate__zoomIn"
+            src="./multimedia/animals-circle-globe-logo-template-260nw-762474991.png" alt="logo de Aniway">
         <nav class="header__nav">
             <ul class="header__lista">
                 <li class="header__item"><a class="header__link" href="">Home</a></li>
@@ -28,10 +29,10 @@
     </header>
     <main class="main">
         <section class="hero">
-            <div class="hero__imagen">
+            <div class="hero__imagen animate__animated animate__slideInUp">
                 <img class="hero__imagen--img" src="./multimedia/k20eqphidush7u8lj1ni_1.jpg_543804098.png" alt="">
             </div>
-                
+
             <div class="hero__contenedor">
                 <h1 class="hero__titulo">!Queremos ayudar y brindar apoyo a la mayor cantidad de animales posible!</h1>
                 <p class="hero__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, autem aliquid.
@@ -41,15 +42,15 @@
                     dignissimos aut blanditiis mollitia dolor cupiditate ad voluptas eius doloremque consectetur
                     corporis molestiae nam! Sapiente, vel.</p>
             </div>
-            
-        </section>   
+
+        </section>
     </main>
     <footer class="footer">
         <ul class="footer__redes">
-                <li class="footer__item"><a class="footer__link" href="#">Link a mi red social Facebook</a></li>
-                <li class="footer__item"><a class="footer__link" href="#">Link a mi red social Instagram</a></li>
-                <li class="footer__item"><a class="footer__link" href="#">Link a mi red social Twitter</a></li>
-                <li class="footer__item"><a class="footer__link" href="#">Link a mi red social Tik Tok</a></li>
+            <li class="footer__item"><a class="footer__link" href="">Link a mi red social Facebook</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Link a mi red social Instagram</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Link a mi red social Twitter</a></li>
+            <li class="footer__item"><a class="footer__link" href="#">Link a mi red social Tik Tok</a></li>
         </ul>
         <div class="footer__mapaContenedor">
             <iframe class="footer__mapa"
