--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <header class="header">
-    <img class="header__logo" src="../multimedia/animals-circle-globe-logo-template-260nw-762474991.jpg" alt="logo de Aniway">
+    <img class="header__logo animate__animated animate__zoomIn" src="../multimedia/animals-circle-globe-logo-template-260nw-762474991.png" alt="logo de Aniway">
     <nav class="header__nav">
         <ul class="header__lista">
             <li class="header__item"><a class="header__link" href="../index.html">Home</a></li>
@@ -60,8 +61,8 @@
             <li class="footer__item"><a class="footer__link" href="#">Link a mi red social Tik Tok</a></li>
         </ul>
     </div>
-    <div class="footer__mapa">
-        <iframe
+    <div class="footer__mapaContenedor">
+        <iframe class="footer__mapa"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52499.07566524135!2d-58.562969599999995!3d-34.6750976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc772198ebd57%3A0xf684172956985f18!2sHospital%20de%20Mor%C3%B3n!5e0!3m2!1ses-419!2sar!4v1638464191846!5m2!1ses-419!2sar"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
